--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Flask = "^2.0.2"
 Flask-Cors = "^3.0.10"
 requests = "^2.26.0"
 PyLaTeX = "^1.4.1"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
