--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask >= "^2.0.2"
-Flask-Cors >= "^3.0.10"
-requests >= "^2.26.0"
-PyLaTeX >= "^1.4.1"
-gunicorn >= "^20.1.0"
+Flask == 2.0.2
+Flask-Cors == 3.0.10
+requests == 2.26.0
+PyLaTeX == 1.4.1
+gunicorn == 20.1.0
 
 pytest
